1557
I'm not sure what the interpreter has to do with this.

{code}
object Tilde {
  val ~ = 5
  println(~)
}
{code}

{code}
yuvi@types$ scalac Tilde.scala 
Tilde.scala:3: error: illegal start of simple expression
  println(~)
           ^
Tilde.scala:4: error: ')' expected but '}' found.
}
^
two errors found
{code}

{code}
yuvi@types$ scalac -version
Scala compiler version 2.9.0.1 -- Copyright 2002-2011, LAMP/EPFL
{code}
